# space_invaders_lab3

./: .gitignore  Bullet.cpp  Bullet.hpp  CMakeLists.txt  Ship.cpp  Ship.hpp  game_parameters.hpp  game_systems.cpp  game_systems.hpp  main.cpp
